offshorer server changes