@@ -9,10 +9,14 @@ import java.io.BufferedReader;
 import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.PrintWriter;
-import java.net.HttpURLConnection;
 import java.net.ServerSocket;
 import java.net.Socket;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 
 import static com.proxyserver.offshoreproxy.constants.OffshorreProxyCodes.PORT;
 
@@ -23,58 +27,74 @@ public class OffshoreproxyApplication {
 
     public static void main(String[] args) {
         SpringApplication.run(OffshoreproxyApplication.class, args);
-        try {
-            ServerSocket serverSocket = new ServerSocket(PORT);
+        ExecutorService executor = Executors.newFixedThreadPool(10);
+        try (ServerSocket serverSocket = new ServerSocket(PORT)) {
+            System.out.println();
             logger.info("Offshore server listening on port {}", PORT);
             while (true) {
                 Socket socket = serverSocket.accept();
                 logger.info("Offshore proxy accepted connection");
-                new Thread(() -> {
-                    try {
+                executor.submit(() -> {
+                    try (Socket s = socket) {
+                        long startTime = System.currentTimeMillis();
 
-                        BufferedReader reader = new BufferedReader(new InputStreamReader(socket.getInputStream()));
+                        // Read request from shipproxy
+                        BufferedReader reader = new BufferedReader(new InputStreamReader(s.getInputStream()));
                         StringBuilder request = new StringBuilder();
                         String line;
                         while ((line = reader.readLine()) != null && !line.isEmpty()) {
                             request.append(line).append("\r\n");
+                            logger.info("Received request line: {}", line);
                         }
-                        logger.info("Offshore proxy received: {}", request);
+                        logger.info("Full request received:  {}", request);
+
+                        // Parse the URL
                         String url = request.toString().split(" ")[1];
-                        System.out.println("Fetching URL: " + url);
+                        logger.info("Fetching URL: {}", url);
+
+                        // Fetch webpage
+                        long fetchStartTime = System.currentTimeMillis();
                         String response = fetchWebpage(url);
+                        long fetchEndTime = System.currentTimeMillis();
+                        System.out.println((fetchEndTime - fetchStartTime) + " ms");
 
-                        PrintWriter writer = new PrintWriter(socket.getOutputStream(), true);
+                        // Send response back to shipproxy
+                        PrintWriter writer = new PrintWriter(s.getOutputStream(), true);
                         writer.println(response);
-
                         logger.info("Sent response to shipproxy: {}", response);
 
-                        socket.close();
+                        long totalTime = System.currentTimeMillis() - startTime;
+                        System.out.println("Total time to process request in offshoreserver: " + totalTime + " ms");
                     } catch (IOException e) {
+                        logger.error("Error processing request:  {}", e.getMessage());
                         e.printStackTrace();
                     }
-                }).start();
+                });
             }
         } catch (IOException e) {
             e.printStackTrace();
+        } finally {
+            executor.shutdown();
         }
     }
 
     private static String fetchWebpage(String urlStr) throws IOException {
-        URL url = new URL(urlStr);
-        HttpURLConnection conn = (HttpURLConnection) url.openConnection();
-        conn.setRequestMethod("GET");
-        conn.setRequestProperty("User-Agent", "curl/7.79.1");
+        try {
+            HttpClient client = HttpClient.newBuilder().connectTimeout(java.time.Duration.ofSeconds(5)).build();
+            HttpRequest request = HttpRequest.newBuilder().uri(new URI(urlStr)).header("User-Agent", "curl/7.79.1").GET().build();
+            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
 
-        BufferedReader reader = new BufferedReader(new InputStreamReader(conn.getInputStream()));
-        StringBuilder response = new StringBuilder();
-        response.append("HTTP/1.1 200 OK\r\n");
-        response.append("Content-Type: text/html; charset=UTF-8\r\n");
-        response.append("\r\n");
-        String line;
-        while ((line = reader.readLine()) != null) {
-            response.append(line).append("\r\n");
+            StringBuilder responseBuilder = new StringBuilder();
+            responseBuilder.append("HTTP/1.1 200 OK\r\n");
+            responseBuilder.append("Content-Type: text/html; charset=UTF-8\r\n");
+            int contentLength = response.body().length();
+            responseBuilder.append("Content-Length: ").append(contentLength).append("\r\n");
+            responseBuilder.append("\r\n");
+            responseBuilder.append(response.body());
+            return responseBuilder.toString();
+        } catch (Exception e) {
+            logger.error("fetchWebpage | Error processing request:  {}", e.getMessage());
+            return "HTTP/1.1 500 Internal Server Error\r\nContent-Type: text/plain\r\nContent-Length: 0\r\n\r\n";
         }
-        reader.close();
-        return response.toString();
     }
 }
